[gd_scene load_steps=2 format=3 uid="uid://bchhu2acmbho6"]

[ext_resource type="Script" uid="uid://byg8j2x8cjvyy" path="res://scripts/tutorial.gd" id="1_c13y7"]

[node name="Tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c13y7")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 638.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2

[node name="SlideFrame" type="PanelContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SlideBox" type="CenterContainer" parent="Margin/VBox/SlideFrame"]
layout_mode = 2

[node name="SlideTexture" type="TextureRect" parent="Margin/VBox/SlideFrame/SlideBox"]
layout_mode = 2
stretch_mode = 6

[node name="Footer" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 8

[node name="PrevButton" type="Button" parent="Margin/VBox/Footer"]
layout_mode = 2
text = "Anterior"

[node name="PageLabel" type="Label" parent="Margin/VBox/Footer"]
layout_mode = 2

[node name="NextButton" type="Button" parent="Margin/VBox/Footer"]
layout_mode = 2
text = "Siguiente"

[node name="SkipButton" type="Button" parent="Margin/VBox/Footer"]
layout_mode = 2
text = "Omitir"

[node name="PlayButton" type="Button" parent="Margin/VBox/Footer"]
layout_mode = 2
text = "Jugar"
